--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -57,5 +57,10 @@ authentication.login = Login
 authentication.signin = Sign-In
 authentication.logout = Logout
 
+## Logout
+logout.title = Logout from your account
+logout.logout = Logout
+logout.desc = Are you sure?
+
 
 
