--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -57,4 +57,8 @@ authentication.login = Entrar
 authentication.signin = Cadastrar
 authentication.logout = Sair
 
+## Logout
+logout.title = Sair da sua conta
+logout.logout = Sair da conta
+logout.desc = Tem certeza?
 
